--- a/build.gradle
+++ b/build.gradle
@@ -100,7 +100,8 @@ cloudFormation {
                 DeploymentBucket: deploymentBucketName,
                 ProjectVersion  : project.version,
                 DeploymentTime  : deploymentTime,
-                DomainName      : "serverlessbook.merkurapp.com"
+                DomainName      : "serverlessbook.merkurapp.com",
+                CloudSearchDomain: "search-serverlessbook-uiyqpdvcdz7o4hxudtnqzpjdtu"
         ]
     }
 }
