--- a/cloudformation.template
+++ b/cloudformation.template
@@ -313,7 +313,8 @@
     },
     "ApiDeployment": {
       "DependsOn": [
-        "TestGetMethod"
+        "TestGetMethod",
+        "SearchGetMethod"
       ],
       "Type": "Custom::ApiDeployment",
       "Properties": {
