--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include 'repository-dynamodb'
 include 'lambda-userregistration'
 include 'lambda-imageresizer'
 include 'lambda-userregistration-welcomemail'
+include 'lambda-userregistration-cloudsearch'
