--- a/cloudformation.template
+++ b/cloudformation.template
@@ -1210,6 +1210,17 @@
           }
         ]
       }
+    },
+    "HealthChecksSnsTopic": {
+      "Type": "AWS::SNS::Topic",
+      "Properties": {
+        "Subscription": [
+          {
+            "Endpoint": "info@cagataygurturk.com",
+            "Protocol": "email"
+          }
+        ]
+      }
     }
   }
 }
